// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TRewardBase
message TRewardBase
{	
	
	
	repeated RewardDefine Reward = 1; // Reward

}

// Defined in table: Reward
message RewardDefine
{	
	
	
	optional uint32 Id = 1; // id
	
	
	optional uint32 DropId = 2; // 掉落id
	
	
	optional uint32 PropType = 3; // 概率类型 1 万分比 2 权重
	
	
	optional uint32 Prop = 4; // 概率或权重
	
	
	optional uint32 RewardType = 5; // 奖励类型(1 金币 2 体力 3 物品 4 亲密度 5 小游戏币 6 另一个掉落 7 小游戏)
	
	
	optional uint32 RewardId = 6; // 奖励id
	
	
	optional uint32 RewardValue = 7; // 奖励数量

}

