// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TShareBase
message TShareBase
{	
	
	
	repeated ShareDefine Share = 1; // Share

}

// Defined in table: Share
message ShareDefine
{	
	
	
	optional uint32 Id = 1; // 唯一id
	
	
	optional uint32 ShareType = 2; // 1 合并新形象 2 新关卡 3 新章节 4 招募分享 5 体力分享 6小游戏次数分享 7 回忆录分享  8 随机约会结果分享 9 翻牌结果分享
	
	
	optional uint32 ShareId = 3; // id
	
	
	optional uint32 FreshType = 4; // 0 没有时间限制 随意分享 1 每天 2 和上一次不一样就行
	
	
	optional uint32 Reward = 5; // 奖励id /倍数
	
	
	optional uint32 Times = 6; // 在时间范围内的次数限制

}

